--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  background-image: url("https://i.pinimg.com/originals/a4/73/cd/a473cda6c0a58d9b2e2bc2292d16c334.jpg");
+  background-image: url("https://www.regentway.in/media/catalog/product/cache/1/thumbnail/600x/17f82f742ffe127f42dca9de82fb58b1/c/a/cab183595178.jpg");
   background-position: center;
   background-repeat: repeat;
   background-size: 100px;
