--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  background-image: url("https://www.regentway.in/media/catalog/product/cache/1/thumbnail/600x/17f82f742ffe127f42dca9de82fb58b1/c/a/cab183595178.jpg");
+  background-image: url("https://data.whicdn.com/images/100072618/original.jpg");
   background-position: center;
   background-repeat: repeat;
   background-size: 100px;
